fix: avoid jumping window in firefox when adjusting range input

--- a/src/options/body.scss
+++ b/src/options/body.scss
@@ -4,9 +4,14 @@ body {
 	}
 
 	margin: 0;
+	margin-right: 17px;
 	font-size: 16px;
 	width: 100%;
 	max-height: 100%;
+
+	@include large-screen {
+		width: 610px;
+	}
 
 	// &.select-file {
 	// 	* {
